2006-01-14  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/*: new snippets plugin
	
2006-01-13  Frank Arnold  <farnold@cvs.gnome.org>

	* gedit/gedit-io-error-message-area.c:
	* gedit/gedit-tab.c:
	* gedit/gedit-utils.c: Moved markup out of gettext messages.

=== gedit 2.13.2 ===

2006-01-11  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.13.2 released

2006-01-09  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac: bump gnome-python-extras requirement to 2.12.0 since
	we need gtksourceview.defs installed.

2006-01-09  Paolo Borelli  <pborelli@katamail.com>

	* gedit/Makefile.am:
	* gedit/gedittextregion.[ch]:
	* gedit/gtktextregion.[ch]:
	* gedit/gedit-document.c:
	* gedit/update-gedittextregion.sh:

	move the local copy of textregion to gedittextregion to avoid
	symbols conflicts with the sourceview copy. Add a simple shell
	script to automate updating.

2006-01-09  Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* gedit/gedit-metadata-manager.c: (parseItem), (save_item):
	use long int when working with time_t. Fix for the bug
	#326248.

2006-01-09  Paolo Maggi  <paolo@gnome.org>

	Patch by Steve Frécinaux  <nud@apinc.org>

	* gedit/gedit-panel.c (gedit_panel_add_item): crop the image to
	GTK_ICON_SIZE_MENU size. 

	* plugins/pythonconsole/pythonconsole.py: use GTK_ICON_SIZE_MENU size
	for the icon

2006-01-08  Paolo Maggi  <paolo@gnome.org>

	* gedit/sexy-icon-entry.c:
	* gedit/sexy-icon-entry.h: updated from libsexy SVN repository

2006-01-08  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-python-module.c (gedit_python_module_init_python):
	does not allow python to manage SIGINT signal: this is needed to avoid
	the crash reported on bug #326191 (Crash when pressing Ctrl+C 
	from terminal) 

2006-01-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-plugins-engine.c: make sure the garbage collector
	runs before we unload C plugins. Fix crash on exit.
