@@ -1,5 +1,11 @@
 2006-01-14  Jesse van den Kieboom  <jesse@icecrew.nl>
 
+	* plugins/snippets/snippets/Snippet.py:
+	* plugins/snippets/snippets/functions.py: apply autoindentation at 
+	all cases
+
+2006-01-14  Jesse van den Kieboom  <jesse@icecrew.nl>
+
 	* plugins/snippets/*: new snippets plugin
 	
 2006-01-13  Frank Arnold  <farnold@cvs.gnome.org>
